--- a/numeric.tex
+++ b/numeric.tex
@@ -330,7 +330,8 @@ Free unbounded	& Negligible				& Resistive medium						& \shortstack{doped semic
  \end{tabular} \end{table}
 %}}}
 % TODO? \paragraph{Selection of FDTD implementations} %{{{
-%MEEP, OpenEMS, B-Calm, EMTL, 
+% note about the meep peculiarity of notation: 'omega'=omega0/2pi , 'gamma'=gamma/2pi, 'sigma'=Deltaeps = F/omega0^2
+%MEEP, OpenEMS, B-Calm, gSvit, EMTL, ..
 %}}}
 
 \subsection{Finite-difference frequency-domain method} % TODO
