--- a/conclusion.tex
+++ b/conclusion.tex
@@ -16,9 +16,20 @@
 
 %%% TODO TODO TODO TODO TODO TODO 
 %%% Hole : Conclusion - what to put here?
-%% NOTES: What was not discussed in the thesis
+%% NOTES: What WAS discussed in the thesis and is special:
+%  * historical notes proving many concepts are as novel as they may appear 
+%  * filled the demand for some starting overview of the common structures
+%  * stress the importance of spatial dispersion
+%  * unification of mm and phc concepts
+%  * pointed out the fundamental problems: 
+%      1) losses in available materials, 
+%      2) excessive spatial dispersion in known structures
+%      3) the s-parameter method, although used, does not always give correct results
+%  * illustrated the difference of these results against CDH
+%  * provide the simulation environment which facilitates correct computations
+
+%% NOTES: What WAS NOT discussed in the thesis
 %% quasicrystals, chiral media and gyrotropy, structures with nonlinearity or loss,    tunable structures
-%% * unification of mm and phc concepts
 %% * mention tunability?       Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved. ...   Attention  was also paid also to investigate the tunability of their properties depending on external parameters, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
 
 
