--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2182,8 +2182,6 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2007},
   publisher={Elsevier}
 }
-
-
 @article{eleftheriades2012transforming,
   title={Transforming electromagnetics using metamaterials},
   author={Eleftheriades, George V and Selvanayagam, Michael},
@@ -2193,6 +2191,14 @@ lts.fzu.cz/pdf/d-js.pdf
   pages={26--38},
   year={2012},
   publisher={IEEE}
+}
+@article{paudyal2013left,
+  title={From Left Handed Materials to Invisible Cloak: Recent Advances},
+  author={Paudyal, Harihar and Johrib, Manoj and Tiwari, Akhilesh},
+  journal={Himalayan Physics},
+  volume={4},
+  pages={18--26},
+  year={2013}
 }
 
 
