--- a/result.tex
+++ b/result.tex
@@ -1,5 +1,13 @@
 \label{section_result}
 
+%% TODO remaining topics to be added or checked: 
+%%	* PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
+	%Aperture-array transmission
+	%Wood anomaly in slit arrays
+	%Wood anomaly in hole arrays
+	%Standing SPP wave
+	%thin wires [8], [28], Swiss rolls [9], SRRs [9], electric SRRs (eSRRs) [29], [30], pairs of rods [10], [12], [31], pair of crosses [32], fishnets [17], [33]”
+
 
 \section{Dielectric slab} %{{{
 The structure composed of alternating dielectric layers, effectively a one-dimensional photonic crystal, has been investigated thoroughly in the previous decades. We review it mostly for comparison with the structures presented in the following. 
@@ -35,9 +43,6 @@ Such a shifting between waves at the lower and upper boundaries of the band gap 
 A defect-mode transmission peak of 1.5\% energy transmission appears in the band gap.
 It can be tuned from 173 to 184 GHz by application of electric field (40 kV/cm) to the defect STO layer \cite{skoromets2013}.
 %}}}
-%% TODO remaining topics to be added: 
-%%			* PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
-
 %illustrate the band-gap formation \cite{laktionov2008}
 % TODO FIND PYTHON SCRIPT ----> compare TMM and FDTD for metallic slabs
 
