--- a/theory.tex
+++ b/theory.tex
@@ -1061,7 +1061,8 @@ Physics, and the field under discussion in particular, have developed rapidly in
 Following the author's personal view,
 the following historical notes on metamaterials and photonic crystals are organized into three independent paradigms that developed in parallel, and only later they were unified. Each of them, on its own, once might seem to already have given their fruits, but their \textit{unification} appears to have renewed the scientific interest and pushed the research further. 
 
-This chapter can in no way cover all relevant papers and ideas over the last century; much better resources on the history of the field are in \cite{shamonina2007metamaterials,eleftheriades2012transforming}, at the web pages of Moroz \cite{moroz} etc. Also the actual designs of the periodic structures are mentioned very briefly, since they will be the subject of the Results section.
+This chapter can in no way cover all relevant papers and ideas over the last century; much better resources on the history of the field are in \cite{shamonina2007metamaterials,eleftheriades2012transforming, paudyal2013left}, 
+, at the web pages of Moroz \cite{moroz} etc. Also the actual designs of the periodic structures are mentioned very briefly, since they will be the subject of the Results section.
 
 % TODO incorporate TODO Note that the concept of metamaterials is not even limited to electrodynamics; macroscopic mechanical structures were demonstrated to exhibit comparable phenomena for acoustic waves. %CITE
 % Photonic crystal slabs with band-gaps for electromagnetic and acoustic waves are also investigated %CITE O. Painter's lab
@@ -1126,22 +1127,23 @@ Clearly, the negative-index slab would be free of spherical aberrations, allowin
 
 %}}}
 \paragraph{Media with parameters near zero}%{  {{ ================= TODO
-Also uncommon in nature are media where $\epsrl(\omega)$ or $\murl(\omega)$ have a very low value compared to vacuum. They are often denoted as \textit{epsilon-near-zero} (ENZ) and \textit{mu-near-zero} (MNZ). % and perhaps note superhigh opt activity?
-The result is also the index of refraction being close to zero, $N\sim 0$. 
-The scientific interest to this class started with the paper of  %% TODO
-published after the merging of the paradigms, and therefore such media are denoted as \textit{zero-index metamaterials}. This is a somewhat confusing term, as the papers focused on their peculiar macroscopic properties usually do not assume any structuration and are thus also applicable to natural homogeneous media of such properties.
+Media where $\epsrl(\omega)$ or $\murl(\omega)$ have a very low value compared to vacuum are another class uncommon in nature. They are often denoted as \textit{epsilon-near-zero} (ENZ) and \textit{mu-near-zero} (MNZ). % and perhaps note superhigh opt activity?
+The result of $\epsrl(\omega)\sim 0$ or $\murl(\omega)\sim 0$ is also the index of refraction being close to zero, $N\sim 0$. 
+Although e.g. the physics of the ionosphere involves regions where the permittivity transits from negative to positive values, the scientific interest in this class of media started with the paper of  %% TODO
+published after the merging of the paradigm with metamaterials, and therefore such media are often denoted syncretically as \textit{zero-index metamaterials}. This is a somewhat confusing term, as the papers focused on their peculiar macroscopic properties usually do not assume any structuration and are thus also applicable to natural homogeneous media of such properties.
 
-Typical for this class is a very low wavevector, which can be approximated to the case of the whole $N\sim 0$ region oscillating in-phase. Wave impinging from air to such a medium refracts from the normal; for angles higher than the usually small critical angle the wave undergoes the \textit{total external reflection}. 
-
-% 
+Typical of this class is a very small wavevector, which can be approximated to the case of the whole $N\sim 0$ region oscillating in-phase. Wave impinging from air to such a medium refracts from the normal; for angles higher than the usually small critical angle the wave undergoes the \textit{total external reflection}. 
+% note: this has been observed in thinned waveguides, too
 % Epsilon-near-zero metamaterials and electromagnetic sources: Tailoring the radiation phase pattern
 % electromagnetic nihility?
 
 %}}}
-\paragraph{Electromagnetic cloaks}%{  {{ ================= TODO
-\cite{alitalo2009electromagnetic}
+\paragraph{Transformation optics and electromagnetic cloaks}%{  {{ ================= TODO
+\cite{eleftheriades2012transforming}
 
-Electromagnetic cloaking by homogeneous media was considered in early 60s by Dollin \cite{dollin1961possibility}
+\cite{alitalo2009electromagnetic} Electromagnetic cloaking % by homogeneous media ???
+was considered in the early 60s by Dollin \cite{dollin1961possibility}
+
 
 %}}}
 
@@ -1421,7 +1423,7 @@ Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
 %%      \subsection{Tunable and switchable materials}
 %%      \subsection{Specifics of the terahertz range}
 
-%putting two resonances near to each other annihilates their “wings”
+%putting two resonances of the same type near to each other annihilates their “wings”
 %→ hard to make a broadband-operating passive MM
 %Metal eps spectra
 %different models: Drude, lossy Drude
@@ -1454,20 +1456,6 @@ Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
 
 %Scaling and non-scaling properties [Zhou PRL 2005]
 %Babinet principle
-%Metal functions
 %diluted metal → Pendry1996's low frequency plasmons
 %Bianisotropy and chirality
-
-%relations between MM and photonic crystal
-%Higher-order Bloch modes
-%
-%Selected all-dielectric metamaterials
-	%Mie resonances in high-permittivity microspheres
-%
-%Selected metalo-dielectric metamaterials
-	%Aperture-array transmission
-		%Wood anomaly in slit arrays
-		%Wood anomaly in hole arrays
-		%Standing SPP wave
-	%“thin wires [8], [28], Swiss rolls [9], SRRs [9], electric SRRs (eSRRs) [29], [30], pairs of rods [10], [12], [31], pair of crosses [32], fishnets [17], [33]”
 
